# DesignPatternExamples

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt
src/1_singleton/src/: main.cpp  singleton.h
src/2_factory_method/: CMakeLists.txt
src/2_factory_method/src/: class.cpp  class.h  factory.cpp  factory.h  main.cpp
src/3_abstract_factory_pattern/: CMakeLists.txt
src/3_abstract_factory_pattern/src/: classA.cpp  classA.h  classB.cpp  classB.h  factory.cpp  factory.h  main.cpp
src/4_builder_pattern/src/: builder.h  class.h  main.cpp
src/5_prototype_pattern/src/: class.h  main.cpp
src/behavioral/: CMakeLists.txt
src/behavioral/chain_of_responsibility/: CMakeLists.txt
src/behavioral/chain_of_responsibility/src/: chain.h  main.cpp  object.h  request.h
src/behavioral/chain_of_responsibility/src/chains/: chain_print_data.h  chain_print_request.h  chain_reset.h  chain_reset_to_data.h
src/behavioral/command/: CMakeLists.txt
src/behavioral/command/src/: command.h  data.h  invoker.h  main.cpp
src/behavioral/interpreter/: CMakeLists.txt
src/behavioral/interpreter/src/: context.cpp  context.h  main.cpp  node.h
src/behavioral/interpreter/src/nodes/: binary_div.h  binary_operation.h  binary_plus.h  unary_minus.h  unary_operation.h  value.h  variable.h
src/behavioral/iterator/: CMakeLists.txt
src/behavioral/iterator/src/: iterable.h  main.cpp
src/behavioral/mediator/: CMakeLists.txt
src/behavioral/mediator/src/: class.h  main.cpp  mediator.h
src/behavioral/memento/: CMakeLists.txt
src/behavioral/memento/src/: main.cpp
src/behavioral/observer/: CMakeLists.txt
src/behavioral/observer/src/: main.cpp  observer.cpp  observer.h  subject.cpp  subject.h  subject.inl
src/behavioral/state/: CMakeLists.txt
src/behavioral/state/src/: main.cpp  printer.cpp  printer.h  state.h  state_visitor.h
src/behavioral/strategy/: CMakeLists.txt
src/behavioral/strategy/src/: class.h  main.cpp  print.cpp  print.h  print_forward.cpp  print_forward.h  print_reverse.cpp  print_reverse.h  type_traits.h
src/behavioral/template_method/: CMakeLists.txt
src/behavioral/template_method/src/: main.cpp  template_method.h
src/behavioral/visitor/: CMakeLists.txt
src/behavioral/visitor/src/: main.cpp  node.h  operand.h  operator.h
src/concurrency/: CMakeLists.txt
src/concurrency/active_object/: CMakeLists.txt
src/concurrency/active_object/src/: active_object.h  main.cpp
src/concurrency/double_checked_locking/: CMakeLists.txt
src/concurrency/double_checked_locking/src/: atomic_only.h  atomic_with_mutex.h  main.cpp
src/concurrency/thread_pool/: CMakeLists.txt
src/concurrency/thread_pool/src/: main.cpp  thread.h
src/creational/: CMakeLists.txt
src/creational/abstract_factory_pattern/src/: classB.cpp  main.cpp
src/creational/builder_pattern/: CMakeLists.txt
src/creational/builder_pattern/src/: builder.cpp  class.cpp
src/creational/factory_method/src/: class.cpp
src/creational/prototype_pattern/: CMakeLists.txt
src/creational/prototype_pattern/src/: class.cpp
src/creational/singleton/: CMakeLists.txt
src/creational/singleton/src/: singleton.cpp
src/structural/: CMakeLists.txt
src/structural/adapter/: CMakeLists.txt
src/structural/adapter/src/: adaptee.h  adapter.h  main.cpp  object.h
src/structural/bridge/: CMakeLists.txt
src/structural/bridge/src/: main.cpp
src/structural/composite/: CMakeLists.txt
src/structural/composite/src/: class.h  composite.h  main.cpp  simple.h
src/structural/decorator/: CMakeLists.txt
src/structural/decorator/src/: class.h  decorator.h  main.cpp
src/structural/facade/: CMakeLists.txt
src/structural/facade/src/: classA.h  classB.h  classC.h  facade.h  main.cpp
src/structural/flyweight/: CMakeLists.txt
src/structural/flyweight/src/: font.h  font_manager.h  main.cpp  renderer.h
src/structural/proxy/: CMakeLists.txt
src/structural/proxy/src/: class.h  main.cpp  proxy.h
(+34 files in other folders)
